--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,16 @@ body {
 }
 
 .header {
+  display: flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+}
+
+.div-profile {
+  display: flex;
+  align-items: center;
+  margin: 0 5px;
 }
 
 .profile-image {
@@ -22,11 +29,18 @@ body {
   height: 48px;
 }
 
+.div-button {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
 .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding: 8px;
 }
 
 button {
@@ -44,5 +58,10 @@ a {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  flex-direction: row;
+  padding-left: 8px;
+  gap: 8px;
+  align-items: center;
 }
