--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,10 +16,33 @@ body {
 }
 
 .modal {
+  display: flex;
+  flex-direction: row;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+}
+
+.excl-pt {
+  display: flex;
+  margin-right: 10px;
+}
+
+.header-and-closeBtn {
+  display: flex;
+  flex-direction: row;
+}
+
+.header {
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
 
 .icon {
@@ -48,6 +71,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
